modal alignment fix IE

--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -753,6 +753,7 @@ a.btn-inverse {
     @media (min-width: 768px) {
       max-width: 600px;
       min-width: 600px;
+      width: 600px;
     }
     @media(max-width: 767px) {
       width: 100%;
